--- a/.env
+++ b/.env
@@ -37,5 +37,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
-###< symfony/mailer ###
+MAILER_DSN=smtp://913570c31857d7:6d7b98486d4949@sandbox.smtp.mailtrap.io:2525
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6LeJjZApAAAAAKY0ZP9YSxQznB-VZVSsX4GMSUyz
+RECAPTCHA3_SECRET=6LeJjZApAAAAABdmnv3j184KoPO_-laTo3o4jfkD
+###< karser/karser-recaptcha3-bundle ###
