--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+DATABASE_URL="mysql://root:@127.0.0.1:3306/synrecipe?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+MAILER_DSN=smtp://kh5zlaq8@mailosaur.net:dR0PCAiG1bNBmlhgalNrKhwsmiOxASSL@smtp.mailosaur.net:587
+
+RECAPTCHA3_ENABLED=0
+
